--- a/style.css
+++ b/style.css
@@ -14,20 +14,8 @@ html {
     flex-direction: row;
 }
 
-/* Large Device Section */
-
-@media (min-width:426px) and (max-width:2560px) {
-    #RegisterSection {
-        display: none;
-    }
-    main{
-        display: none;
-    }
-}
-
-/* Small Device Section */
-
-@media (min-width:320px) and (max-width:425px) {
+/* Small devices (Mobiles, 576px and Down) */
+@media (min-width: 320px) and (max-width: 480px) {
 
     #LargeDevices {
         display: none;
@@ -135,5 +123,59 @@ html {
         width: 150px;
         height: 40px;
     }
+
+}
+
+/* Medium devices (tablets, 768px and Down) */
+@media (min-width: 481px) and (max-width: 768px) {
+    #RegisterSection {
+        display: none;
+    }
+    main{
+        display: none;
+    }
+}
+
+
+/* // Large devices (desktops, 992px and Down)*/
+@media (min-width: 7769px) and (max-width: 1024px) {
+    #RegisterSection {
+        display: none;
+    }
+    main{
+        display: none;
+    }
+}
+
+
+/* // X-Large devices (large desktops, 1200px and Down)*/
+@media (min-width: 1025px) and (max-width: 1200px) {
+    #RegisterSection {
+        display: none;
+    }
+    main{
+        display: none;
+    }
+}
+
+/* // XX-Large devices (larger desktops, 1400px and Down)*/
+@media (min-width: 1201px) and (max-width: 2000px) {
+    #RegisterSection {
+        display: none;
+    }
+    main{
+        display: none;
+    }
+}
+
+/* Large Device Section */
+
+
+
+/* Small Device Section */
+
+@media (min-width:320px) and (max-width:425px) {
+
+  
 
 }
